Changing source dl to Github fork

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<strong>*Disclaimer:</strong> This demo works only works on; Safari, Chrome, and Firefox 4+.
 		</p>
 		<p>
-			<a href="http://tylergaw.com/blog/post/502100947/you-did-what-with-what">read the blog post</a> | <a href="themanfromhollywood.zip">download the source</a> | <a href="http://twitter.com/thegaw">follow @thegaw!</a>
+			<a href="http://tylergaw.com/blog/post/502100947/you-did-what-with-what">read the blog post</a> | <a href="http://github.com/tylergaw/themanfromhollywood">fork it!</a> | <a href="http://twitter.com/thegaw">follow @thegaw!</a>
 		</p>
 	</header>
 	
