Changing the audio file used

--- a/index.html
+++ b/index.html
@@ -115,9 +115,10 @@
 	</footer>
 	
 	<audio id="track-main" autobuffer="autobuffer">
-		<source src="c/audio/hollywood.ogg" type="audio/ogg" />
-		<source src="c/audio/hollywood.wav" />
+		<source src="c/audio/hollywood.ogg">
+		<source src="c/audio/hollywood.m4a">
 	</audio>
+	
 	<script type="text/javascript"> 
 		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 	</script> 
