Removing unused audio file. Updating audio element

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 		<a href="http://www.tylergaw.com">tyler gaw doesn't sleep</a>
 	</footer>
 	
-	<audio id="track-main" autobuffer="autobuffer">
+	<audio id="track-main" autobuffer>
 		<source src="c/audio/hollywood.ogg">
 		<source src="c/audio/hollywood.m4a">
 	</audio>
