--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 		<h1><span></span>The Man From Hollywood</h1>
 		
 		<h2>
-			is a Kinetic Type experiment that makes use of Advanced CSS selectors and Webkit CSS properties*. The idea is based off of kinetic type videos that are usually created using After Effects, Flash, or other animation tools. Javascript is used, but minimally, really just to turn class names on and off. All of the animations are accomplished using CSS.
+			is a Kinetic Type experiment that makes use of Advanced CSS selectors and CSS transitions*. The idea is based off of kinetic type videos that are usually created using After Effects, Flash, or other animation tools. Javascript is used, but minimally, really just to turn class names on and off. All of the animations are accomplished using CSS.
 		</h2>
 		<p>
-			<strong>*Disclaimer:</strong> This demo works only works on; Safari, Chrome, and Firefox 4+.
+			<strong>*Disclaimer:</strong> This demo works only works on; Chrome, Safari, and kinda-sorta on Firefox 4+.
 		</p>
 		<p>
 			<a href="http://tylergaw.com/blog/post/502100947/you-did-what-with-what">read the blog post</a> | <a href="http://github.com/tylergaw/themanfromhollywood">fork it!</a> | <a href="http://twitter.com/thegaw">follow @thegaw!</a>
