--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
 	<link rel="stylesheet" href="c/css/hollywood.css" />
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 	<script type="text/javascript" src="c/js/hollywood.js"></script>
+	
+	<script type="text/javascript">
+
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-24386968-1']);
+	  _gaq.push(['_setDomainName', '.tylergaw.com']);
+	  _gaq.push(['_trackPageview']);
+
+	  (function() {
+	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();
+
+	</script>
 </head>
 <body>
 	<header>
@@ -118,12 +133,5 @@
 		<source src="c/audio/hollywood.ogg">
 		<source src="c/audio/hollywood.m4a">
 	</audio>
-	
-	<script type="text/javascript"> 
-		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-	</script> 
-	<script type="text/javascript"> 
-		try { var pageTracker = _gat._getTracker("UA-1104578-1");pageTracker._trackPageview();} catch(err) {}
-	</script>
 </body>
 </html>
