Loads jquery from https

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<title>The Man From Hollywood</title>
 	<link rel="stylesheet" href="c/css/hollywood.css" />
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 	<script type="text/javascript" src="c/js/hollywood.js"></script>
-	
+
 	<script type="text/javascript">
 
 	  var _gaq = _gaq || [];
@@ -24,12 +24,12 @@
 </head>
 <body>
 	<header>
-		<!-- 
+		<!--
 			Gradient text; the span is on top of the text with a partially transparent background gradient
 		     same technique as http://www.webdesignerwall.com/tutorials/css-gradient-text-effect but without the image.
 		-->
 		<h1><span></span>The Man From Hollywood</h1>
-		
+
 		<h2>
 			is a Kinetic Type experiment that makes use of Advanced CSS selectors and CSS transitions*. The idea is based off of kinetic type videos that are usually created using After Effects, Flash, or other animation tools. Javascript is used, but minimally, really just to turn class names on and off. All of the animations are accomplished using CSS.
 		</h2>
@@ -40,27 +40,27 @@
 			<a href="http://tylergaw.com/blog/post/502100947/you-did-what-with-what">read the blog post</a> | <a href="http://github.com/tylergaw/themanfromhollywood">fork it!</a> | <a href="http://twitter.com/thegaw">follow @thegaw!</a>
 		</p>
 	</header>
-	
+
 	<hr />
-	
+
 	<section id="stage">
-		
+
 		<!-- This play button is one of my favorite things, no images, all CSS -->
 		<a id="play">
 			<span>
 				<i>Play</i>
 			</span>
 		</a>
-		
+
 		<!-- Created with a radial background gradient -->
 		<span id="vignette"></span>
-		
+
 		<dl>
 			<dt>Leo <!-- Bruce Willis --></dt>
 			<dd id="scene-1">
 				Begin
 			</dd>
-			
+
 			<dt>Chester <!-- Quentin Tarantino --></dt>
 			<dd id="scene-2">
 				<p class="act-1">Ok, Ted</p>
@@ -74,7 +74,7 @@
 			</dd>
 			<dt>Norman <!--Paul Calderon --></dt>
 			<dd id="scene-3">
-				
+
 				<!-- This here is a shit-ton of span elements, a css selector like p:word(3) might be pretty sweet, albeit not very practical -->
 				<p class="act-1"><span>You</span> <span>can</span> <span>buy a</span> <span>wh<em>ooooooo</em>le</span> <span>lotta soup</span> <span>with</span> <span>that pile</span></p>
 			</dd>
@@ -122,13 +122,13 @@
 			</dd>
 		</dl>
 	</section>
-	
+
 	<hr />
 
 	<footer>
 		<a href="http://www.tylergaw.com">tyler gaw doesn't sleep</a>
 	</footer>
-	
+
 	<audio id="track-main" autobuffer>
 		<source src="c/audio/hollywood.ogg">
 		<source src="c/audio/hollywood.m4a">
