Uses relative paths for netlify hosting

--- a/index.html
+++ b/index.html
@@ -5,22 +5,7 @@
 	<title>The Man From Hollywood</title>
 	<link rel="stylesheet" href="c/css/hollywood.css" />
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-	<script type="text/javascript" src="c/js/hollywood.js"></script>
-
-	<script type="text/javascript">
-
-	  var _gaq = _gaq || [];
-	  _gaq.push(['_setAccount', 'UA-24386968-1']);
-	  _gaq.push(['_setDomainName', '.tylergaw.com']);
-	  _gaq.push(['_trackPageview']);
-
-	  (function() {
-	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-	  })();
-
-	</script>
+	<script type="text/javascript" src="./c/js/hollywood.js"></script>
 </head>
 <body>
 	<header>
@@ -126,12 +111,12 @@
 	<hr />
 
 	<footer>
-		<a href="http://www.tylergaw.com">tyler gaw doesn't sleep</a>
+		<a href="https://www.tylergaw.com">tyler gaw doesn't sleep</a>
 	</footer>
 
 	<audio id="track-main" autobuffer>
-		<source src="c/audio/hollywood.ogg">
-		<source src="c/audio/hollywood.m4a">
+		<source src="./c/audio/hollywood.ogg">
+		<source src="./c/audio/hollywood.m4a">
 	</audio>
 </body>
 </html>
