Updates path to stylesheet

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>The Man From Hollywood</title>
-	<link rel="stylesheet" href="c/css/hollywood.css" />
+	<link rel="stylesheet" href="./c/css/hollywood.css" />
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 	<script type="text/javascript" src="./c/js/hollywood.js"></script>
 </head>
