--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>The Man From Hollywood</title>
-	<link rel="stylesheet" href="./c/css/hollywood.css" />
+	<link rel="stylesheet" href="c/css/hollywood.css" />
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-	<script type="text/javascript" src="./c/js/hollywood.js"></script>
+	<script type="text/javascript" src="c/js/hollywood.js"></script>
 </head>
 <body>
 	<header>
@@ -115,8 +115,8 @@
 	</footer>
 
 	<audio id="track-main" autobuffer>
-		<source src="./c/audio/hollywood.ogg">
-		<source src="./c/audio/hollywood.m4a">
+		<source src="c/audio/hollywood.ogg">
+		<source src="c/audio/hollywood.m4a">
 	</audio>
 </body>
 </html>
